fixed issues with the home image and text div positions not resetting when out of view

--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,6 @@ body {
 section {
   min-height: 100vh;
   min-width: 100vw;
-  border: 2px dashed white;
 }
 
 /* Home Section */
